bug fic and stylization improvements

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,6 +2,7 @@ body,
 html,
 #root {
   height: 100%;
+  margin: 0 auto;
 }
 
 html {
@@ -10,15 +11,16 @@ html {
 
 h1 {
   padding: .77rem 0;
-  background-color: #010c3f;
+  background-color: #745502;
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Zen Dots', cursive;
   font-size: 1.88rem;
   color: #fff;
+  margin: 0 auto;
 }
 
 h1 .highlight {
-  color: #6c41ec;
+  color: #fcbb43;
 }
 
 h2 {
@@ -29,13 +31,14 @@ h2 {
 .App {
   height: 100%;
   padding: 0 17% 10% 17%;
-  background-image: url('./background_photo_desktop.jpg');
+  background-image: url('./backg.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
   color: #fff;
+  margin: 0 auto;
 }
 
 .App-playlist {
